test/extension_test_cases/invalid/structs/structdeclaration.wacc
# variable can have _ in their names

# Output:
# #empty#

# Exit:
# 0

# Program:

struct MyType is
int a ;
int b ;
end

struct MyType is
int a ;
int b ;
end

begin
  exit 0
end
